--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 * {
     box-sizing: border-box;
+    font-family: "Raleway";
 }
 
 a {
     text-decoration: none;
 }
 
-a:hover{
+/* a:hover{
     box-shadow:  0px 4px 35px rgba(168, 172, 176, 0.19);
-}
+} */
 
 /* Header */
 
@@ -180,8 +181,13 @@ a:hover{
     top: 312px;
     margin: 0 101px;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     row-gap: 60px;
+    column-gap: 76px;
+}
+
+.products a:hover {
+    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
 }
 
 /* Product despcription page */
@@ -194,6 +200,7 @@ a:hover{
     height: 595px;
     min-width: 1002px;
 }
+
 .product-description {
     display: flex;
     align-items: flex-start;
@@ -209,8 +216,8 @@ a:hover{
     width: 610px;
 }
 
-.product-brand{
-    color:rgb(29, 31, 34);
+.product-brand {
+    color: rgb(29, 31, 34);
     font-family: "Raleway";
     font-weight: 600;
     font-size: 42px;
@@ -220,8 +227,8 @@ a:hover{
     white-space: nowrap;
 }
 
-.product-title{
-    color:rgb(29, 31, 34);
+.product-title {
+    color: rgb(29, 31, 34);
     font-family: "Raleway";
     font-weight: 400;
     font-size: 30px;
@@ -230,15 +237,17 @@ a:hover{
     line-height: 27px;
     white-space: nowrap;
 }
-.attributes-container{
+
+.attributes-container {
     display: flex;
     flex-direction: row;
-    gap:8px;
+    gap: 8px;
 }
-.attributes-rectangle{
+
+.attributes-rectangle {
     width: 63px;
     height: 45px;
-    border:1px solid #1D1F22;
+    border: 1px solid #1D1F22;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -246,25 +255,28 @@ a:hover{
     font-family: "Railway";
     font-weight: 400;
 }
-.attributes-rectangle-color{
+
+.attributes-rectangle-color {
     width: 36px;
     height: 36px;
-    border:1px solid rgb(94, 206, 123, 1);
+    border: 1px solid rgb(94, 206, 123, 1);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.product-description-price{
+
+.product-description-price {
     height: 18px;
     letter-spacing: 0;
     line-height: 18px;
     white-space: nowrap;
     font-size: 18px;
-    color:#1D1F22;
+    color: #1D1F22;
     font-weight: 500;
     text-transform: uppercase;
 }
-.product-description button{
+
+.product-description button {
     padding: 16px 32px;
     width: 292px;
     font-family: "Raleway";
@@ -272,5 +284,97 @@ a:hover{
     color: rgb(255, 255, 255, 1);
     background-color: rgba(94, 206, 123, 1);
     font-size: 16px;
+    border: none;
+}
+
+.product-images {
+    float: left;
+    position: absolute;
+    left: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.product-images img:hover {
+    border: 1px solid rgba(94, 206, 123, 1);
+}
+
+.product-images img {
+    width: 79px;
+    height: 80px;
+}
+
+/* Cart */
+
+.title-cart {
+    color: #1d1f22;
+    font-family: "Raleway";
+    font-size: 32px;
+    font-weight: 700;
+    height: 68px;
+    letter-spacing: 0;
+    line-height: 40px;
+    white-space: nowrap;
+    text-transform: uppercase;
+}
+
+/* Cart Overlay */
+
+.cart-overlay {
+    position: absolute;
+    width: 325px;
+    height: auto;
+    left: 1043px;
+    top: 78px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 16px;
+    gap: 32px;
+}
+
+.cart-overlay-products-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 32px;
+    width: 293px;
+    height: 538px;
+    border: 1px solid black;
+    background-color: #fff;
+}
+.cart-overlay-total{
+    display: flex;
+    justify-content: space-between;
+    width: 293px;
+}
+.cart-overlay-btns {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 12px;
+}
+
+.cart-overlay button {
+    width: 140px;
+    height: 43px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart-overlay-view-bag {
+    background-color: #fff;
+    border: 1px solid #1d1f22;
+}
+
+.cart-overlay-check-out {
+    background-color: #5ECE7B;
+    color: #fff;
     border: none;
 }
