--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,6 @@ a {
     text-decoration: none;
 }
 
-/* a:hover{
-    box-shadow:  0px 4px 35px rgba(168, 172, 176, 0.19);
-} */
-
 /* Header */
 
 .header {
@@ -243,7 +239,11 @@ a {
     flex-direction: row;
     gap: 8px;
 }
-
+ .attributes{
+    font-weight: 700;
+    font-size: 18px;
+    text-transform: uppercase;
+ }
 .attributes-rectangle {
     width: 63px;
     height: 45px;
@@ -287,6 +287,9 @@ a {
     border: none;
 }
 
+.product-description-text{
+    margin-top: 32px;
+}
 .product-images {
     float: left;
     position: absolute;
@@ -334,6 +337,7 @@ a {
     align-items: center;
     padding: 32px 16px;
     gap: 32px;
+    z-index: 10;
 }
 
 .cart-overlay-products-container {
@@ -344,7 +348,6 @@ a {
     gap: 32px;
     width: 293px;
     height: 538px;
-    border: 1px solid black;
     background-color: #fff;
 }
 .cart-overlay-total{
@@ -366,6 +369,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .cart-overlay-view-bag {
