--- a/src/App.css
+++ b/src/App.css
@@ -265,14 +265,13 @@ a {
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    font-family: "Railway";
     font-weight: 400;
 }
 
 .attributes-rectangle-color {
-    width: 36px;
-    height: 36px;
-    border: 1px solid rgb(94, 206, 123, 1);
+    width: 32px;
+    height: 32px;
+    border: 1px solid #5ece7b;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -322,7 +321,7 @@ a {
 }
 
 /* Cart */
-.title-cart-position{
+.title-cart-position {
     margin: 160px 0 0 101px;
 
 }
@@ -338,13 +337,52 @@ a {
     width: 1240px;
     height: 1px;
     background: #E5E5E5;
-    margin-left: 101px;
+    margin: 16px 101px 0;
 }
-
-.cart-img{
+.cart-line-container{
+    width: 1240px;
+    height: 1px;
+    background: #E5E5E5;
+    margin: 16px 0;
+}
+.cart-item-container{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 100px;
+    width: 1240px;
+    flex-wrap: wrap;
+}
+.cart-brand-title-price{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.cart-attributes{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 16px;
+}
+.cart-img {
     width: 200px;
     height: 288px;
 }
+
+.cart-order-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 32px;
+    width: 279px;
+    height: 43px;
+    background-color: #5ECE7B;
+    font-size: 14px;
+    font-weight: 600;
+    color:#fff;
+    border: none;
+}
+
 /* Cart Overlay */
 
 .cart-overlay {
@@ -372,6 +410,11 @@ a {
     width: 293px;
     height: 538px;
     background-color: #fff;
+}
+
+.cart-overlay-img {
+    width: 121px;
+    height: 190px;
 }
 
 .cart-overlay-total {
