--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
-    font-family: "Raleway";
+    font-family: "Raleway", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #1d1f22;
 }
 
 a {
@@ -31,7 +32,6 @@ a {
     align-items: flex-start;
     padding: 0px;
     justify-content: space-around;
-
     position: absolute;
     width: 234px;
     height: 56px;
@@ -272,9 +272,9 @@ a {
     width: 32px;
     height: 32px;
     border: 1px solid #5ece7b;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /* display: flex; */
+    /* align-items: center;
+    justify-content: center; */
 }
 
 .product-description-price {
@@ -339,33 +339,69 @@ a {
     background: #E5E5E5;
     margin: 16px 101px 0;
 }
-.cart-line-container{
+
+.cart-line-container {
     width: 1240px;
     height: 1px;
     background: #E5E5E5;
     margin: 16px 0;
 }
-.cart-item-container{
+
+.cart-item-container {
     display: flex;
     justify-content: space-between;
     margin-left: 100px;
     width: 1240px;
     flex-wrap: wrap;
 }
-.cart-brand-title-price{
+
+.cart-brand-title-price {
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
-.cart-attributes{
+
+.cart-attributes {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 16px;
 }
+
+.cart-items-right {
+    display: flex;
+    flex-direction: row;
+    margin: 24px 0 0 0;
+    gap: 24px
+}
+
+.cart-quantity-selector {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.cart-item-quantity {
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .cart-img {
     width: 200px;
     height: 288px;
+}
+
+.cart-minus-plus-squares {
+    width: 45px;
+    height: 45px;
+    color: #1d1f22;
+    border: 1px solid #1d1f22;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
 }
 
 .cart-order-btn {
@@ -376,11 +412,19 @@ a {
     padding: 16px 32px;
     width: 279px;
     height: 43px;
+    margin: 10px 0 32px 0;
     background-color: #5ECE7B;
     font-size: 14px;
     font-weight: 600;
-    color:#fff;
+    color: #fff;
     border: none;
+}
+.cart-order-container{
+    display: flex;
+    flex-direction: column;
+    margin-left: 101px;
+    gap: 8px;
+    font-size: 24px;
 }
 
 /* Cart Overlay */
@@ -404,15 +448,60 @@ a {
 .cart-overlay-products-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     padding: 0px;
-    gap: 32px;
-    width: 293px;
-    height: 538px;
+    gap: 40px;
+    width: 300px;
     background-color: #fff;
 }
+.cart-overlay-item-container{
+    display: flex;
+    justify-content: space-between;
+}
 
-.cart-overlay-img {
+.cart-overlay-items-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.cart-overlay-text{
+    font-size: 16px;
+}
+.cart-overlay-product-price{
+    font-size: 16px;
+    font-weight: 600;
+}
+.cart-overlay-attributes-text{
+    font-size: 14px;
+}
+.cart-overlay-attributes-rectangle{
+    width: 28px;
+    height: 28px;
+    border: 1px solid #1D1F22; 
+     display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    font-weight: 400;
+    word-break: break-all;
+    text-align: center;
+}
+
+.cart-overlay-attributes-rectangle-color{
+    width: 16px;
+    height: 16px;
+    border: 1px solid #5ece7b;
+}
+.cart-overlay-items-right{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+.cart-overlay-item-quantity{
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+}
+.cart-overlay img {
     width: 121px;
     height: 190px;
 }
