--- a/src/App.css
+++ b/src/App.css
@@ -75,8 +75,8 @@ a {
 }
 
 .currency {
-    width: 38px;
-    height: 29px;
+    /* width: 38px;
+    height: 29px; */
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
