--- a/src/App.css
+++ b/src/App.css
@@ -50,16 +50,18 @@ a {
     text-transform: uppercase;
 }
 
-.navigation a:hover .label{
-    color: #5ECE7B;
-}
-.label-active{
+.navigation a:hover .label {
     color: #5ECE7B;
 }
 
-.tab-active{
+.label-active {
+    color: #5ECE7B;
+}
+
+.tab-active {
     border-bottom: 2px solid #5ECE7B;
 }
+
 .actions {
     display: flex;
     flex-direction: row;
@@ -75,8 +77,6 @@ a {
 }
 
 .currency {
-    /* width: 38px;
-    height: 29px; */
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -84,16 +84,36 @@ a {
 
 .currency-sign {
     height: 29px;
-    letter-spacing: 0;
     line-height: 28.8px;
     margin-top: -1;
     min-width: 12px;
     white-space: nowrap;
-    color: rgba(29, 31, 34, 1);
     font-family: "Raleway-Light";
     font-size: 18px;
     font-weight: 300;
-    font-style: normal;
+    cursor: pointer;
+}
+
+.currencySelector {
+    width: 114px;
+    height: auto;
+    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+    position: absolute;
+    left: 1248px;
+    top: 65px;
+    cursor: pointer;
+}
+
+.currencyDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px 20px 10px 20px;
+    font-weight: 600;
+}
+
+.currencyDiv:hover {
+    background-color: #EEEEEE;
 }
 
 .currency img {
@@ -102,6 +122,18 @@ a {
     margin-left: 10px;
     margin-top: 6px;
     width: 7px;
+}
+
+.cart-items-notification {
+    background-color: #1d1f22;
+    color: #fff;
+    border-radius: 60px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 0px;
+    right: -12px;
+    text-align: center;
 }
 
 .cart-icon {
@@ -277,9 +309,6 @@ a {
     width: 32px;
     height: 32px;
     border: 1px solid #5ece7b;
-    /* display: flex; */
-    /* align-items: center;
-    justify-content: center; */
 }
 
 .product-description-price {
@@ -328,7 +357,6 @@ a {
 /* Cart */
 .title-cart-position {
     margin: 160px 0 0 101px;
-
 }
 
 .title-cart {
@@ -424,7 +452,8 @@ a {
     color: #fff;
     border: none;
 }
-.cart-order-container{
+
+.cart-order-container {
     display: flex;
     flex-direction: column;
     margin-left: 101px;
@@ -458,31 +487,36 @@ a {
     width: 300px;
     background-color: #fff;
 }
-.cart-overlay-item-container{
+
+.cart-overlay-item-container {
     display: flex;
     justify-content: space-between;
 }
 
-.cart-overlay-items-left{
+.cart-overlay-items-left {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.cart-overlay-text{
+
+.cart-overlay-text {
     font-size: 16px;
 }
-.cart-overlay-product-price{
+
+.cart-overlay-product-price {
     font-size: 16px;
     font-weight: 600;
 }
-.cart-overlay-attributes-text{
+
+.cart-overlay-attributes-text {
     font-size: 14px;
 }
-.cart-overlay-attributes-rectangle{
+
+.cart-overlay-attributes-rectangle {
     width: 28px;
     height: 28px;
-    border: 1px solid #1D1F22; 
-     display: flex;
+    border: 1px solid #1D1F22;
+    display: flex;
     align-items: center;
     justify-content: center;
     font-size: 12px;
@@ -491,21 +525,24 @@ a {
     text-align: center;
 }
 
-.cart-overlay-attributes-rectangle-color{
+.cart-overlay-attributes-rectangle-color {
     width: 16px;
     height: 16px;
     border: 1px solid #5ece7b;
 }
-.cart-overlay-items-right{
+
+.cart-overlay-items-right {
     display: flex;
     flex-direction: row;
     gap: 8px;
 }
-.cart-overlay-item-quantity{
+
+.cart-overlay-item-quantity {
     font-size: 16px;
     display: flex;
     justify-content: center;
 }
+
 .cart-overlay img {
     width: 121px;
     height: 190px;
