--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,8 @@ a {
     top: 0px;
     right: -12px;
     text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 .cart-icon {
@@ -219,7 +221,7 @@ a {
     display: flex;
     flex-direction: row;
     position: relative;
-    top: 312px;
+    top: 270px;
     margin: 0 101px;
     flex-wrap: wrap;
     justify-content: center;
@@ -448,6 +450,7 @@ a {
     align-items: center;
     justify-content: center;
     font-size: 32px;
+    cursor: pointer;
 }
 
 .cart-order-btn {
@@ -536,12 +539,14 @@ a {
     font-weight: 400;
     word-break: break-all;
     text-align: center;
+    cursor: pointer;
 }
 
 .cart-overlay-attributes-rectangle-color {
     width: 16px;
     height: 16px;
     border: 1px solid #5ece7b;
+    cursor: pointer;
 }
 
 .cart-overlay-items-right {
