--- a/src/App.css
+++ b/src/App.css
@@ -309,6 +309,7 @@ a {
     justify-content: center;
     font-size: 16px;
     font-weight: 400;
+    cursor: pointer;
 }
 
 .attributes-rectangle:hover{
@@ -320,13 +321,18 @@ a {
     width: 32px;
     height: 32px;
     border: 1px solid #5ece7b;
+    cursor: pointer;
 }
 
 .attributes-rectangle-color:hover{
-    width: 36px;
-    height: 36px;
+    width: 38px;
+    height: 38px;
 }
 
+.cart-attributes-color-selected{
+    width: 38px;
+    height: 38px;
+}
 .product-description-price {
     letter-spacing: 0;
     white-space: nowrap;
@@ -344,6 +350,7 @@ a {
     background-color: rgba(94, 206, 123, 1);
     font-size: 16px;
     border: none;
+    cursor: pointer;
 }
 
 .product-description-text {
@@ -413,6 +420,7 @@ a {
     flex-direction: column;
     justify-content: center;
     margin-top: 16px;
+    cursor: pointer;
 }
 
 .cart-items-right {
@@ -473,6 +481,17 @@ a {
     margin-left: 101px;
     gap: 8px;
     font-size: 24px;
+}
+
+.cart-remove-btn{
+    font-size: 32px;
+    cursor: pointer;
+    position: relative;
+    right: -22px;
+    top:-32px;
+    color:red;
+    width: 45px;
+    height: 45px;
 }
 
 /* Cart Overlay */
@@ -551,6 +570,15 @@ a {
     cursor: pointer;
 }
 
+.cart-overlay-attributes-rectangle-color:hover{
+    width: 20px;
+    height: 20px;
+}
+
+.cart-overlay-color-selected{
+    width: 20px;
+    height: 20px;
+}
 .cart-overlay-items-right {
     display: flex;
     flex-direction: row;
