--- a/src/App.css
+++ b/src/App.css
@@ -501,58 +501,77 @@ img {
 
 /* Cart Overlay */
 
+
 .cart-overlay {
-    position: absolute;
+    position: relative;
     width: 325px;
-    height: auto;
+    height: 677px;
     left: 1043px;
     top: 78px;
     background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding: 32px 16px;
     gap: 32px;
     z-index: 10;
-}
-
-.cart-overlay-products-container {
+  }
+  
+  .cart-overlay-products-container {
+    position: absolute;
+    top: 90px;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     padding: 0px;
     gap: 40px;
-    width: 300px;
+    overflow: scroll;
     background-color: #fff;
-}
-
-.cart-overlay-item-container {
+    max-height: 63%;
+  }
+  
+  .cart-overlay-item-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0;
+    gap: 8px;
+    justify-content: space-between;
+  }
+  
+  .cart-overlay-items-left {
     display: flex;
     justify-content: space-between;
-}
-
-.cart-overlay-items-left {
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0;
+    gap: 4px;
+    width: 164px;
+  }
+  
+  .items-left {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
     justify-content: space-between;
-}
-
-.cart-overlay-text {
+    flex-wrap: wrap;
+    align-self: stretch;
+  }
+  
+  .cart-overlay-text {
     font-size: 16px;
-}
-
-.cart-overlay-product-price {
+  }
+  
+  .cart-overlay-product-price {
     font-size: 16px;
     font-weight: 600;
-}
-
-.cart-overlay-attributes-text {
+  }
+  
+  .cart-overlay-attributes-text {
     font-size: 14px;
-}
-
-.cart-overlay-attributes-rectangle {
-    width: 28px;
-    height: 28px;
+  }
+  
+  .cart-overlay-attributes-rectangle {
+    width: 24px;
+    height: 24px;
     border: 1px solid #1D1F22;
     display: flex;
     align-items: center;
@@ -562,96 +581,121 @@ img {
     word-break: break-all;
     text-align: center;
     cursor: pointer;
-}
-.atributes-selected {
+  }
+  
+  .incrementDecrement{
+    width: 24px;
+    height: 24px;
+    border: 1px solid #1D1F22;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 28px;
+    font-weight: 100;
+    cursor: pointer;
+  }
+  
+  .atributes-selected {
     background-color: #1D1F22;
-    color:#fff
-}
-
-.cart-overlay-attributes-rectangle-color {
+    color: #fff
+  }
+  
+  .cart-overlay-attributes-rectangle-color {
     width: 16px;
     height: 16px;
     border: 1px solid #5ece7b;
     cursor: pointer;
-}
-
-.cart-overlay-attributes-rectangle-color:hover{
+  }
+  
+  .cart-overlay-attributes-rectangle-color:hover {
     width: 20px;
     height: 20px;
-}
-
-.cart-overlay-color-selected{
+  }
+  
+  .cart-overlay-color-selected {
     width: 20px;
     height: 20px;
-}
-.cart-overlay-items-right {
+  }
+  
+  .cart-overlay-items-right {
     display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-
-.cart-overlay-item-quantity {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    gap: 32px;
+    width: 24px;
+    min-height: 190px;
+    align-self: stretch;
+  }
+  
+  .cart-overlay-item-quantity {
     font-size: 16px;
     display: flex;
     justify-content: center;
-}
-
-.cart-overlay img {
+  }
+  
+  .cart-overlay img {
     width: 121px;
     height: 190px;
-}
-
-.cart-overlay-remove-btn {
+    object-fit: contain;
+  }
+  
+  .cart-overlay-remove-btn {
     width: 20px;
     height: 20px;
     color: red;
     font-size: 16px;
     text-align: center;
     position: absolute;
-    right:13px;
+    right: 13px;
     cursor: pointer;
-}
-
-.cart-overlay-total {
+  }
+  
+  .cart-overlay-total {
     display: flex;
     justify-content: space-between;
-    width: 293px;
-}
-
-.cart-overlay-total-text {
+    width: 289px;
+    position: absolute;
+    top: 542px;
+  }
+  
+  .cart-overlay-total-text {
     font-size: 16px;
     font-weight: 600;
-}
-
-.cart-overlay-price {
+  }
+  
+  .cart-overlay-price {
     font-size: 16px;
     font-weight: 700;
-}
-
-.cart-overlay-btns {
+  }
+  
+  .cart-overlay-btns {
+    position: absolute;
+    top: 602px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     padding: 0px;
     gap: 12px;
-}
-
-.cart-overlay button {
+  }
+  
+  .cart-overlay button {
     width: 140px;
     height: 43px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-}
-
-.cart-overlay-view-bag {
+  }
+  
+  .cart-overlay-view-bag {
     background-color: #fff;
     border: 1px solid #1d1f22;
-}
-
-.cart-overlay-check-out {
+  }
+  
+  .cart-overlay-check-out {
     background-color: #5ECE7B;
     color: #fff;
     border: none;
-}
+  }
