--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,10 @@ img {
     top: 23px;
 }
 
+.actions-cart {
+    position: relative;
+}
+
 .currency {
     display: flex;
     justify-content: flex-start;
@@ -135,8 +139,8 @@ img {
     width: 20px;
     height: 20px;
     position: absolute;
-    top: 0px;
-    right: -12px;
+    top: -16px;
+    right: -16px;
     text-align: center;
     display: flex;
     align-items: center;
@@ -145,6 +149,41 @@ img {
 .cart-icon {
     width: 20px;
     height: 20px;
+}
+
+@media (min-width: 320px) and (max-width: 912px) {
+    .header {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .currencySelector {
+        left: initial;
+        right: 0;
+    }
+
+    /* .cart-items-notification {
+        top: 16px;
+        right: 0;
+    } */
+
+    .logo {
+        position: initial;
+        width: auto;
+    }
+
+    .navigation {
+        position: initial;
+        width: auto;
+        gap: 16px;
+    }
+
+    .actions {
+        position: initial;
+        width: auto;
+    }
 }
 
 /* Title */
@@ -173,7 +212,7 @@ img {
 .product-card {
     /* position: relative; */
     width: 386px;
-    height: 444px;
+    min-height: 444px;
     left: 100px;
     top: 331px;
     display: flex;
@@ -244,7 +283,13 @@ img {
     bottom: 123px;
     left: 288px;
     cursor: pointer;
-    z-index: 10;
+    z-index: 9;
+}
+
+@media (min-width: 320px) and (max-width: 912px) {
+    .product-card-img {
+        width: 73%;
+    }
 }
 
 /* Product despcription page */
@@ -384,6 +429,40 @@ img {
     object-fit: cover;
 }
 
+
+@media (min-width: 320px) and (max-width: 912px) {
+    .product-container{
+        flex-direction: column;
+        min-width: 100%;
+        margin-left: 0;
+        align-items: center;
+    }
+
+    .product-container img {
+        width: 100%;
+        height: auto;
+    }
+
+    .product-images {
+        position: initial;
+        flex-direction: row;
+    }
+
+    .product-description{
+        margin-left: 0;
+        min-height: auto;
+    }
+
+    .product-images {
+        gap:16px;
+        margin:0;
+    }
+
+    .product-images  img {
+        width: 50px;
+    }
+}
+
 /* Cart */
 .title-cart-position {
     margin: 160px 0 0 101px;
@@ -501,6 +580,20 @@ img {
     color:red;
     width: 45px;
     height: 45px;
+}
+
+@media (min-width: 320px) and (max-width: 912px) {
+    .cart-item-container {
+        margin-left: 0;
+        width: 100vw;
+        justify-content: space-between;
+        padding: 0 32px;
+    }
+    
+    .cart-order-container {
+        margin-left: 0;
+        padding: 0 32px;        
+    }
 }
 
 /* Cart Overlay */
@@ -702,4 +795,13 @@ img {
     background-color: #5ECE7B;
     color: #fff;
     border: none;
+  }
+
+  @media (min-width: 320px) and (max-width: 912px) {
+    .cart-overlay {
+        right: 0;
+        left: inherit;
+        top: 0;
+        position: absolute;
+    }
   }
